--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,8 @@
 name: "Aditya Relangi"
 description: "Aditya Relangi's website"
 
-url: "http://localhost:4000"
+url: "http://adityarelangi.com/"
 
-paginate: 10
 
 markdown: rdiscount
 permalink: title
